# mandelbrot-rs

./: Cargo.toml  README.md
benches/: mandelbrot.rs
docs/: README.md
src/: color.rs  lib.rs  main.rs
