[package]
name = "oxidfract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oxidfract"
path = "src/main.rs"

[dependencies]
rayon = { version = "1.5", optional = true }
blake3 = { version = "1.3", optional = true }

[features]
default = ["lsm8", "rayon", "blake3", "write_file"]

write_file = []
lsm = []
lsm4 = []
lsm8 = []
lsm_avx2 = []
