[package]
name = "mandelbrot-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mandelbrot-rs"
path = "src/main.rs"
bench = false

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
rayon = "1.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "mandelbrot"
harness = false

[lib]
bench = false
